Инпуты очищаются во всех формах

--- a/Lesson11/mainTask/index.html
+++ b/Lesson11/mainTask/index.html
@@ -174,8 +174,8 @@
 						Мы с вами свяжемся
 					</div>
 					<form id="form">
-						<input required type="email" name="email" placeholder="Ваша почта">
-						<input required type="tel" name="phoneContacts" placeholder="Ваш телефон">
+						<input required type="email" class="form__input" name="email" placeholder="Ваша почта">
+						<input required type="tel" class="form__input" name="phoneContacts" placeholder="Ваш телефон">
 						<button type="submit">Отправить</button>
 					</form>
 				</div>
